# Fountain-Yelp-Program

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  CPPLINT.cfg  GRADE.md  README.md  pull.sh
docs/: PROPOSAL.md  SPECIFICATIONS.md  _config.yml  index.md
src/: .nfs00000000000027490000045d  .nfs000000000000281100000454  Backup.sh  Campus.cpp  Campus.h  CredentialFunctions.cpp  CredentialFunctions.h  ErrorCheck.cpp  ErrorCheck.h  Error_Checking.cpp  Error_Checking.h  Fountain.cpp  Fountain.h  Fountains.txt  PutInFile.cpp  PutInFile.h  Put_In_File.cpp  Review.cpp  Review.h  Review.txt  StringCreate.cpp  StringCreate.h  User.cpp  User.h  Users.txt  _Temporary__Main.cpp  a.out  compile.sh  main.cpp  test_driver.cpp
